--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         <div class="container">
             <div class="card">
                 <a href="https://rynka-shii.github.io/smk-n1-tg-pura/" target="_blank">
-                    <img src="project1.png" alt="Gambar 1">
+                    <img src="project1.PNG" alt="Gambar 1">
                 </a>
             </div>
             <div class="card">
                 <a href="https://rynka-shii.github.io/glass-effect/" target="_blank">
-                    <img src="project2.png" alt="Gambar 2">
+                    <img src="project2.PNG" alt="Gambar 2">
                 </a>
             </div>
             <div class="card">
                 <a href="https://rynka-shii.github.io/smk-n1-tg-pura-sidebar/" target="_blank">
-                    <img src="project3.png" alt="Gambar 3">
+                    <img src="project3.PNG" alt="Gambar 3">
                 </a>
             </div>        
         </div>
@@ -104,4 +104,5 @@
         </div>
     </section>
 </body>
+
 </html>
